# Computer-Graphics-course

./: .gitignore  README.md
exams/E1/: Resolución de lista de ejercicios Parcial Computación gráfica.docx
exams/E2/: Resolución de lista de ejercicios FINAL Computación gráfica.docx
material/S10/: Camera calibration.docx  cube_with_texture.off  main.py
material/S11/: main.py  sphere.off
material/S12/: main.py
material/S2/lab3/: RGBtoHSV.py  main.py
material/S2/lab4/: main.py
material/S4/: main.py
material/S5/: jarvis.py  notas.docx
material/S6/: 2.py  main.py
material/S9/: cubes.py  ellipse.eps  ellipsoid_3d.eps  some.eps  sphere_3d.eps  squares.py
pcs/PC1/exercise01/: solution.py
pcs/PC1/exercise02/: solution.py
pcs/PC1/exercise03/: solution.py
pcs/PC1/exercise04/: solution.py
pcs/PC1/exercise05/: solution.py
pcs/PC2/exercise1/: main.py
pcs/PC2/exercise10/: main.py
pcs/PC2/exercise11/: main.py
pcs/PC2/exercise13/: main.py
pcs/PC2/exercise14/: main.py
pcs/PC2/exercise2/: main.py
pcs/PC2/exercise3/: main.py  segment.py
pcs/PC2/exercise4/: main.py
pcs/PC2/exercise5/: main.py
pcs/PC2/exercise6/: main.cpp  table.xlsx
pcs/PC2/exercise8/: main.py
pcs/PC2/exercise9/: explanation.docx
pcs/PC3/: README.md
pcs/PC3/exercise01/: solution.py
pcs/PC3/exercise02/: cube.off  cube.ply  solution.py
pcs/PC3/exercise03/: solution.py
pcs/PC3/exercise04/: solution.py
pcs/PC4/: README.md  tester.py
pcs/PC4/exercise04/: CMakeLists.txt  Image stitcher with OpenCV C.docx  solution.py
pcs/PC4/exercise04/src/: main.cpp  stitcher.cpp
(+43 files in other folders)
